K8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fixmate-backend
  namespace: fixmate
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: fixmate-backend
  template:
    metadata:
      labels:
        app: fixmate-backend
    spec:
      containers:
        - name: fixmate-backend
          image: asia-south1-docker.pkg.dev/fixmate-490017/fixmate-repo/fixmate-backend:latest
          ports:
            - containerPort: 8081

          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "500m"
              memory: "1024Mi"

          volumeMounts:
            - name: gcp-storage-key
              mountPath: /var/secrets/google
              readOnly: true

          startupProbe:
            httpGet:
              path: /healthz/ready
              port: 8081
            initialDelaySeconds: 90
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 24

          readinessProbe:
            httpGet:
              path: /healthz/ready
              port: 8081
            initialDelaySeconds: 150
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 6

          livenessProbe:
            httpGet:
              path: /healthz/live
              port: 8081
            initialDelaySeconds: 200
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 6

      volumes:
        - name: gcp-storage-key
          secret:
            secretName: gcp-storage-key
