K8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fixmate-backend
  namespace: fixmate
  labels:
    app: fixmate-backend
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  type: ClusterIP
  selector:
    app: fixmate-backend
  ports:
    - name: http
      port: 80
      targetPort: 8081
      protocol: TCP
