K8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fixmate-ingress
  namespace: fixmate
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: fixmate-backend
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fixmate-frontend-service
                port:
                  number: 80
